Fixed mobile nav close button clipping Also added som epadding to ensure we take the full window on iphone

--- a/source/stylesheets/mobile.css.scss
+++ b/source/stylesheets/mobile.css.scss
@@ -161,6 +161,7 @@
     top: 0;
     left: 0;
     z-index: 999;
+    padding-bottom: 15px;
 
     &.active {
       @include transition(margin-top 0.35s ease-in-out);
@@ -171,12 +172,12 @@
     }
     a.close {
       @include small-text;
-      line-height: 1;
+      line-height: 14px;
       display: block;
       text-align: right;
       clear: both;
       border-top: 1px solid #fff;
-      padding: (10em/13) 0;
+      padding: (14em/13) 0;
       span {
         display: block;
         padding-right: 24px;
